# fiddle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  attest  fiddle.cc
.github/workflows/: push-pull.yml
cmake/: FIDDLEConfig.cmake.in  config.h.in
examples/: CMakeLists.txt
examples/bridge/: CMakeLists.txt  README.md  bridge.cc  input2d
examples/elastic-band/: CMakeLists.txt  README.md  band.cc  input2d
examples/turek-hron/: CMakeLists.txt  input2d  turek-hron-raw-inport.cc  turek-hron.cc
include/fiddle/: index_translator.h  overlap_partitioning_tools.h  overlap_triangulation.h
scripts/: check-indentation  compile-clang-format  download-clang-format  indent-all  indent_common.sh
source/base/: initial_guess.cc  quadrature_family.cc  samrai_utilities.cc  utilities.cc
source/grid/: box_utilities.cc  data_in.cc  grid_utilities.cc  intersection_predicate.cc  intersection_predicate_lib.cc  nodal_patch_map.cc  overlap_tria.cc  patch_map.cc  surface_tria.cc  triangle.c  triangle.h
source/interaction/: IIMethod.cpp  dlm_method.cc  elemental_interaction.cc  ifed_method.cc  ifed_method_base.cc  (+4 more)
tests/: CMakeLists.txt  attest.conf.in  tests.h
tests/base/: base64.cc  base64.output  copy_database.cc  copy_database.input  copy_database.output  hello.cc  initial_guess.cc  initial_guess.output  nonintersecting_sphere_01.cc  nonintersecting_sphere_01_2d.output  nonintersecting_sphere_01_3d.output  qgauss_family_01.cc  qgauss_family_01.output  qgauss_family_02.cc  qgauss_family_02.output  qwv_family_01.cc  qwv_family_01.output
tests/grid/: IIM_interface_intersection.cc  box_to_bbox.cc  box_to_bbox.input  box_to_bbox.output  centroid_01.cc  centroid_01.mpirun=4.input  centroid_01.mpirun=4.output  centroid_01.output  collect_bboxes_01.cc  collect_bboxes_01_2d.mpirun=4.input  collect_bboxes_01_2d.mpirun=4.output  collect_bboxes_01_2d.output  collect_bboxes_01_3d.mpirun=4.input  collect_bboxes_01_3d.mpirun=4.output  collect_bboxes_01_3d.output  collect_edge_lengths_01.cc  collect_edge_lengths_01.mpirun=4.output  edge_lengths_01.cc  edge_lengths_01.mpirun=4.output  edge_lengths_01.output  edge_lengths_02.cc  edge_lengths_02.mpirun=4.output  edge_lengths_02.output  exodus.cc  exodus_2d.p1.output  exodus_2d.p2.output  exodus_2d.q1.output  exodus_2d.q2.output  exodus_parallel.cc  exodus_parallel_2d.p1.mpirun=4.output  exodus_parallel_2d.q2.mpirun=4.output  extract_nodeset_01.cc  extract_nodeset_01_3d.output  fe_predicate_01.cc  fe_predicate_01.output  grid_predicate_01.cc  grid_predicate_01.mpirun=4.output  grid_predicate_01.output  line_edge_intersection.cc  line_face_intersection.cc  (+35 more)
tests/interaction/: count_nodes_01.cc  count_nodes_01.input  count_nodes_01.output  count_quadrature_points_01.cc  count_quadrature_points_01.input  count_quadrature_points_01.mpirun=4.input  count_quadrature_points_01.mpirun=4.output  count_quadrature_points_01.output  dlm_01.cc  dlm_01.output  elemental_interpolate_01.cc  elemental_interpolate_01_2d.input  elemental_interpolate_01_2d.mpirun=4.input  elemental_interpolate_01_2d.mpirun=4.output  elemental_interpolate_01_2d.output  ifed_ex4.cc  ifed_ex4_2d.maxpoint.input  ifed_ex4_2d.maxpoint.output  ifed_ex4_2d.meters.input  ifed_ex4_2d.meters.output  ifed_ex4_2d.restart=40.mpirun=4.input  ifed_ex4_2d.restart=40.mpirun=4.output  ifed_ex4_2d.workload.artificial.mpirun=4.input  ifed_ex4_2d.workload.artificial.mpirun=4.output  ifed_ex4_2d.workload.input  ifed_ex4_2d.workload.mpirun=4.input  ifed_ex4_2d.workload.mpirun=4.output  ifed_ex4_2d.workload.output  ifed_ex4_simplex.cc  ifed_interpolate_01.cc  ifed_interpolate_01_2d.artificial.input  ifed_interpolate_01_2d.artificial.mpirun=4.input  ifed_interpolate_01_2d.artificial.mpirun=4.output  ifed_interpolate_01_2d.artificial.output  ifed_interpolate_01_2d.input  ifed_interpolate_01_2d.mpirun=4.input  ifed_interpolate_01_2d.mpirun=4.output  ifed_interpolate_01_2d.nodal.cubic.input  ifed_interpolate_01_2d.nodal.cubic.mpirun=4.input  ifed_interpolate_01_2d.nodal.cubic.mpirun=4.output  (+107 more)
tests/mechanics/: body_force_01.cc  body_force_01.output  compute_load_vector_01.cc  compute_load_vector_01.mpirun=4.output  compute_load_vector_01.output  fiber_network_01.cc  fiber_network_01.input  fiber_network_01.output  force_boundary_01.cc  force_boundary_01.mpirun=4.input  force_boundary_01.mpirun=4.output  force_boundary_01.output  force_boundary_02.cc  force_boundary_02.input  force_boundary_02.output  force_volumetric_01.cc  force_volumetric_01.mpirun=3.input  force_volumetric_01.mpirun=3.output  force_volumetric_01.output  force_volumetric_02.cc  force_volumetric_02.output  me_values_01.cc  me_values_01.flip.input  me_values_01.flip.output  me_values_01.input  me_values_01.output  me_values_01.rotate.input  me_values_01.rotate.output  me_values_01.scale.input  me_values_01.scale.output  me_values_01.scale2.input  me_values_01.scale2.output  me_values_02.cc  me_values_02.flip.input  me_values_02.flip.output  me_values_02.input  me_values_02.output  me_values_02.scale.input  me_values_02.scale.output  me_values_03.cc  (+35 more)
tests/postprocess/: fiber_network_01.cc  fiber_network_01.output  meter_mesh_01.cc  meter_mesh_01.input  meter_mesh_01.mpirun=4.input  meter_mesh_01.mpirun=4.output  meter_mesh_01.output  meter_mesh_02.cc  meter_mesh_02.input  meter_mesh_02.mpirun=8.input  meter_mesh_02.mpirun=8.output  meter_mesh_02.output  meter_mesh_03.cc  meter_mesh_03.input  meter_mesh_03.output  point_values_01.cc  point_values_01.input  point_values_01.mpirun=4.input  point_values_01.mpirun=4.output  point_values_01.output  vertices_inside_domain.cc  vertices_inside_domain.input  vertices_inside_domain.mpirun=4.input  vertices_inside_domain.mpirun=4.output  vertices_inside_domain.output  volume_meter_01.cc  volume_meter_01.input  volume_meter_01.mpirun=4.input  volume_meter_01.mpirun=4.output  volume_meter_01.output  volume_meter_02.cc  volume_meter_02.input  volume_meter_02.output
tests/transfer/: scatter_01.cc  scatter_01.mpirun=4.output  scatter_01.mpirun=7.input  scatter_01.mpirun=7.output  scatter_01.output
(+57 files in other folders)
