ADD_EXECUTABLE(bridge EXCLUDE_FROM_ALL bridge.cc)

TARGET_LINK_LIBRARIES(bridge fiddle2d)
SET_TARGET_PROPERTIES(bridge
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY
  "${CMAKE_BINARY_DIR}/examples/bridge"
  OUTPUT_NAME
  main2d)
TARGET_INCLUDE_DIRECTORIES(bridge PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
CONFIGURE_FILE(input2d "${CMAKE_BINARY_DIR}/examples/bridge" COPYONLY)
ADD_DEPENDENCIES(examples bridge)
