ADD_EXECUTABLE(band EXCLUDE_FROM_ALL band.cc)

TARGET_LINK_LIBRARIES(band fiddle2d)
SET_TARGET_PROPERTIES(band
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY
  "${CMAKE_BINARY_DIR}/examples/elastic-band"
  OUTPUT_NAME
  main2d)

TARGET_INCLUDE_DIRECTORIES(band PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
CONFIGURE_FILE(input2d "${CMAKE_BINARY_DIR}/examples/band" COPYONLY)
ADD_DEPENDENCIES(examples band)
